(lang dune 3.14)

(name pcxlib)

(generate_opam_files true)

(source
 (github mdales/pcxlib))

(authors "Michael Dales <michael@digitalflapjack.com>")

(maintainers "Michael Dales <michael@digitalflapjack.com>")

(license ICS)

(documentation https://url/to/documentation)

(package
 (name pcxlib)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
